:bug::lipstick: patch overflow x

--- a/pages/styles.module.scss
+++ b/pages/styles.module.scss
@@ -2,6 +2,9 @@
 
 .table {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 30%);
+    width: 100%;
+    justify-content: center;
+    box-sizing: border-box;
     gap: 2rem;
 }
